k8s/nginx-loadbalancer/app-nginx-ingress.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver-v2-secure
spec:
  selector:
    matchLabels:
      app: echoserver-v2-secure
  replicas: 1
  template:
    metadata:
      labels:
        app: echoserver-v2-secure
    spec:
      containers:
        - image: k8s.gcr.io/e2e-test-images/echoserver:2.5
          name: echoserver-v2-secure
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: echoserver-v2-secure
spec:
  ports:
    - port: 8080
      protocol: TCP
  type: ClusterIP
  selector:
    app: echoserver-v2-secure
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echoserver-v2-secure
  annotations:
    cert-manager.io/cluster-issuer: staging
spec:
  ingressClassName: external-nginx
  rules:
    - host: echo.barriofarma.cl
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: echoserver-v2-secure
                port:
                  number: 8080
  tls:
    - hosts:
        - echo.barriofarma.cl
      secretName: echo-barriofarma-cl
