k8s/nginx-loadbalancer/deployment3.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver-v1
spec:
  selector:
    matchLabels:
      app: echoserver-v1
  replicas: 1
  template:
    metadata:
      labels:
        app: echoserver-v1
    spec:
      containers:
        - name: echoserver-v1
          image: k8s.gcr.io/e2e-test-images/echoserver:2.5
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: echoserver-v1
spec:
  ports:
    - port: 8080
      protocol: TCP
  type: ClusterIP
  selector:
    app: echoserver-v1
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echoserver-v1
spec:
  ingressClassName: external-nginx
  rules:
    - host: echo.barriofarma.cl
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: echoserver-v1
                port:
                  number: 8080
